FIXED: Add new network page: The warning "MoPub requires an ad network id for enabled adunits." is misaligned.

--- a/server/public/css/elements/mopub_custom.scss
+++ b/server/public/css/elements/mopub_custom.scss
@@ -347,7 +347,7 @@ div.pub-id-edit, span.pub_id.muted {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-    width: 140px;
+    width: 100%;
     cursor:pointer;
 }
 
