--- a/server/public/css/style.css
+++ b/server/public/css/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /*
  * Nullify all of the preset styles
  */
@@ -5538,7 +5537,7 @@ div.pub-id-edit, span.pub_id.muted {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  width: 140px;
+  width: 100%;
   cursor: pointer; }
 
 div.editable {
